# Monitex

./: .gitignore  README.md  angular.json  docker-compose.yml  package-lock.json  package.json
.github/workflows/: deploy-monitex.yml  monitex.yml  test.yml
Backend/: Dockerfile  Program.cs  appsettings.json  asyncRequestResult  asyncResult  smart_home.csproj  smart_home.http  smart_home.sln  syncRequestResult  syncResult
Backend/Controllers/: AuthController.cs  DeviceController.cs  SensorsController.cs  TestController.cs  UserController.cs
Backend/DTOs/: AnomalyNotificationDto.cs  AuthResponceDTO.cs  CreateDeviceDTO.cs  CreateSensorDTO.cs  DeviceHealthHeartbeatMessage.cs  DeviceHealthSignalRDto.cs  InfluxSensorReadingMessage.cs  LoginDTO.cs  RegisterDTO.cs  SensorSummaryDto.cs  SingalRDTO.cs
Backend/Data/: DbContext.cs  PostgresDbContext.cs
Backend/Middleware/: RequestLoggingExtentions.cs  RequestLoggingMiddleware.cs
Backend/Model/: Device.cs  Home.cs  SensorReading.cs  Sensors.cs  user.cs
Front-Web/: Dockerfile  angular.json  cite.config.ts  package-lock.json  package.json
edge/: esp32_Final_Simulation.sh  esp32_health_simulation_danger.sh  esp32_health_simulation_normal.sh  esp32_health_simulation_warning.sh  esp32_simulation.sh
edge/esp32/: Cargo.toml  sdkconfig.defaults
edge/esp32/src/: Wifi.rs  adc.rs  dns.rs  health.rs  main.rs  mqtt.rs  payload.rs  ping.rs
monitex-ai/: Dockerfile  esp32_anomaly_model.joblib  requirements.txt  train_model.py
nginx/: nginx.conf
postgres-init/: init.sql
public/: smart_home.avif
queries/: querey.sql
(+111 files in other folders)
