[package]
name = "hello-esp-idf"
version = "0.1.0"
authors = ["Martell0x1 <marawanzein222@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "hello-esp-idf"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

#experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-sys = { version = "0.37.1", features = ["binstart"] }
esp-idf-hal = "*"
esp-idf-svc = "0.52.1"

[build-dependencies]
embuild = "0.33"
